trying once more

--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -23,6 +23,10 @@ stages:
     deployType: "standard"
     tmsUpload: false
 steps:
+  setupCommonPipelineEnvironment:
+    collectTelemetryData: true
+  mtaBuild:
+    buildTarget: "CF"
   artifactPrepareVersion:
     versioningType: "cloud_noTag"
   cloudFoundryDeploy:
